Fix dark mode toggle functionality

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 body {
-  margin: 0;
+  /* background-image: linear-gradient(to bottom, #020917, #101725); */
   color: #fff;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  background-image: linear-gradient(to bottom, #020917, #101725);
+  margin: 0;
 }
 
 .content {
+  background-color: var(--blue-color);
   display: flex;
   min-height: 100vh;
   line-height: 1.1;
