--- a/src/components/form/Toggle/Toggle.module.css
+++ b/src/components/form/Toggle/Toggle.module.css
@@ -8,8 +8,7 @@
   position: relative;
   width: 5.6rem;
   height: 3.1rem;
-  /* background-color: #83d8ff; */
-  background-color: var(--blue-color);
+  background-color: #83d8ff;
   border-radius: 5rem;
   transition: background-color 200ms
     cubic-bezier(0.445, 0.05, 0.55, 0.95);
