--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -3,11 +3,15 @@
     --blue-color: #6F00FF;
   } */
   [data-theme="dark"] {
+    --background-color: #333;
+
     --blue-color: #6F00FF;
   }
   
   /* Set the light mode variables... */
   [data-theme="light"] {
+    --background-color: #fff;
+
     --blue-color: white;
   }
 }
